--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,200 +24,34 @@
 <section class="bg-white">
     <div class="container">
         <div class="row justify-content-center text-center">
-            <div class="col-12 col-md-9 col-lg-8">
+            <div class="col-12">
                 <span class="title-decorative" data-aos="fade-up" data-aos-delay="10">What do we do?</span>
-                <h2 class="display-4" data-aos="fade-up" data-aos-delay="100">Trust though transparency</h2>
-                <span class="lead" data-aos="fade-up" data-aos-delay="200">
+                <h2 class="display-4" data-aos="fade-up" data-aos-delay="100">Standardization</h2>
+                <p class="lead" data-aos="fade-up" data-aos-delay="200">
                     In May 2015, the White House launched the
                     <a href="https://www.policedatainitiative.org/">Police Data Initiative</a>
                     (PDI) in an effort to encourage law enforcement agencies to release data
                     on their interactions with the communities they serve.
-                </span>
-            </div>
-            <!--
-            <div class="col-12">
-                <span class="lead">
-                    In May 2015, the White House launched the <a href="https://www.policedatainitiative.org/">Police Data Initiative (PDI)</a> in an effort
-                    to encourage law enforcement agencies to release data on their interactions with
-                    the communities they serve.
-                </span>
-                <img alt="Image" src="/img/formats.png" class="img-fluid py-3" width="75%"/>
-                <span class="lead">
-                    Since then, hundreds of law enforcement agencies, universities, media outlets,
-                    and grassroots organizations have contributed to a growing collection of public
-                    data on police activity in the U.S.
-                </span>
-            </div>
-        -->
-        <!--end of col-->
-        </div>
-        <div id="arcs" data-aos-id="chart" data-aos="fade-up" style="position: relative; width: 100%; height: 50%;">
-        </div>
-    </div>
-    <!--end of container-->
-</section>
-
-    <!--end of section-->
-    <section class="bg-white">
-    <div class="container">
-        <div class="row justify-content-around align-items-center">
-        <div class="col-12 col-md-6 col-lg-5 text-center text-md-left section-intro">
-            <span class="title-decorative">Designed for Developers</span>
-            <h3 class="h1">Familiar, modern tooling</h3>
-            <span class="lead">
-            Wingman employs industry-standard development tools with an intuitive workflow designed to get you up and runnning faster.
-            </span>
-            <a href="#">Explore Documentation &rsaquo;</a>
-        </div>
-        <!--end of col-->
-        <div class="col-8 col-md-6 col-lg-4">
-            <img alt="Image" src="/img/graphic-developer-group.svg" class="img-fluid shadow" />
-        </div>
-        <!--end of col-->
-        </div>
-        <!--end of row-->
-    </div>
-    <!--end of container-->
-    </section>
-    <!--end of section-->
-    <section class="bg-white flush-with-above pb-0">
-    <div class="container">
-        <div class="row justify-content-around align-items-center">
-        <div class="col-12 col-md-5 order-md-2 mb-5 mb-md-0">
-            <span class="title-decorative">Developed for Designers</span>
-            <h5 class="h1">Responsive, naturally.</h5>
-            <p class="lead">
-            Built on the mobile-first Bootstrap 4 architecture. Wingman scales elegantly to suit all screen sizes.
-            </p>
-            <a href="pages-app.html">Explore App Pages &rsaquo;</a>
-        </div>
-        <!--end of col-->
-        <div class="col-12 col-md-5 order-md-1">
-            <a href="pages-app.html">
-            <img alt="Image" src="/img/graphic-intro-ipad.png" class="img-fluid shadow" />
-            </a>
-        </div>
-        <!--end of col-->
-        </div>
-        <!--end of row-->
-    </div>
-    <!--end of container-->
-    </section>
-    <!--end of section-->
-    <section class="bg-dark text-white space-lg">
-    <div class="container">
-        <div class="row justify-content-center">
-        <div class="col-12 col-lg-10">
-            <div class="media">
-            <!-- <img alt="Image" src="/img/avatar-male-3.jpg" class="avatar avatar-lg" /> -->
-            <div class="media-body">
-                <p class="h2">
-                I've found in my experience that “cleaning the data is 80% of the hard work.”
                 </p>
-                <span>DJ Patil, former U.S. Chief Data Scientist</span>
-            </div>
             </div>
         </div>
-        <!--end of col-->
+        <div class="row">
+            <div id="arcs" class="my-3" data-aos-id="chart" data-aos="fade-up" style="position: relative; width: 100%; height: 50%;">
         </div>
-        <!--end of row-->
+        <div class="row justify-content-center text-center">
+            <div class="col-12">
+                <p class="lead">
+                    The <b>OpenPDI</b> project expands upon this affort by aggregating data from
+                    hundreds of individual sources (law enforcement agencies, universities, media
+                    outlets, grassroots organizations, etc.) and creates well-documented,
+                    standardized datasets.
+                </p>
+                <p>
+                    <a href="#">Learn more &rsaquo;</a>
+                </p>
+            </div>
+        </div>
     </div>
-    <!--end of container-->
-    </section>
-    <!--end of section-->
-    <section>
-    <div class="container">
-        <div class="row justify-content-center text-center section-intro">
-        <div class="col-12 col-md-9 col-lg-8">
-            <span class="title-decorative" data-aos="fade-up" data-aos-delay="10">Flexible &amp; Extensible</span>
-            <h2 class="display-4" data-aos="fade-up" data-aos-delay="100">Bootstrap core + much more</h2>
-            <span class="lead" data-aos="fade-up" data-aos-delay="200">Wingman features full coverage of Bootstrap's core components plus a suite of additional time-saving features</span>
-
-        </div>
-        <!--end of col-->
-        </div>
-        <!--end of row-->
-
-        <div class="row justify-content-around align-items-center">
-        <div class="col-12 col-md-6 col-lg-5 order-md-2">
-            <ul class="nav" id="myTab" role="tablist">
-            <li>
-                <a class="active card" id="tab-1" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">
-                <div class="card-body">
-                    <h5>Modular &amp; Multi-Purpose</h5>
-                    <p>
-                    Create pages rich in functionality with Wingman's array of modular widgets - carefully designed for a wide range of purposes.
-                    </p>
-                </div>
-                </a>
-            </li>
-            <li>
-                <a class="card" id="tab-2" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">
-                <div class="card-body">
-                    <h5>Familiar Markup</h5>
-                    <p>
-                    Based on the Bootstrap 4 codebase, Wingman's code is instantly familiar, easy to understand and a dream to extend.
-                    </p>
-                </div>
-                </a>
-            </li>
-            <li>
-                <a class="card" id="tab-3" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">
-                <div class="card-body">
-                    <h5>Purposeful Plug-ins</h5>
-                    <p>
-                    Elegantly extending Bootstrap's core functionality with Wizards, Touch Sliders, Interface Icons and more.
-                    </p>
-                </div>
-                </a>
-            </li>
-            </ul>
-        </div>
-        <!--end of col-->
-        <div class="col-12 col-md-6 order-md-1">
-            <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="tab-1">
-                <img alt="Image" class="img-fluid shadow" src="/img/graphic-intro-widgets.png" />
-            </div>
-            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="tab-2">
-                <img alt="Image" class="img-fluid shadow" src="/img/graphic-intro-code.png" />
-            </div>
-            <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="tab-3">
-                <img alt="Image" class="img-fluid shadow" src="/img/graphic-intro-plugins.png" />
-            </div>
-            </div>
-        </div>
-        <!--end of col-->
-        </div>
-        <!--end of row-->
-        <div class="row justify-content-center text-center section-outro">
-        <div class="col-lg-4 col-md-5">
-            <h6>Detailed Overview</h6>
-            <p>Wingman's component index showcases the full breadth of features at a glance</p>
-            <a href="components-bootstrap.html">Start exploring &rsaquo;</a>
-        </div>
-        <!--end of col-->
-        </div>
-        <!--end of row-->
-    </div>
-    <!--end of container-->
-    </section>
-    <!--end of section-->
-    <section class="bg-gradient p-0 text-white">
-    <svg class="decorative-divider" preserveAspectRatio="none" viewbox=" 0 0 100 100">
-        <polygon fill="#F8F9FB" points="0 0 100 0 100 100"></polygon>
-    </svg>
-    <div class="container space-lg">
-        <div class="row text-center">
-        <div class="col">
-            <h3 class="h1">Start building feature-rich websites</h3>
-            <a href="https://themes.getbootstrap.com/product/wingman-landing-page-app-template" class="btn btn-lg btn-light">Purchase Now</a>
-        </div>
-        <!--end of col-->
-        </div>
-        <!--end of row-->
-    </div>
-    <!--end of container-->
 </section>
 {{ end }}
 
@@ -225,75 +59,72 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.6/proj4.js"></script>
 <script src="https://code.highcharts.com/maps/highmaps.js"></script>
 <script src="https://code.highcharts.com/maps/modules/data.js"></script>
-<script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
-<script src="https://code.highcharts.com/maps/modules/offline-exporting.js"></script>
 <script src="https://code.highcharts.com/mapdata/countries/us/us-all.js"></script>
 
-
 <script type="text/javascript">
-var H = Highcharts, map = H.maps['countries/us/us-all'], chart;
+    var H = Highcharts, map = H.maps['countries/us/us-all'], chart;
 
-var options = {
-    title: {
-        text: null
-    },
-    legend: {
-        enabled: false
-    },
-    exporting: false,
-    credits: false,
-    tooltip: {
-        enabled: false,
-        pointFormat: '{point.capital}, {point.parentState}<br>' +
-            'Lat: {point.lat}<br>' +
-            'Lon: {point.lon}<br>' +
-            'Population: {point.population}'
-    },
-    xAxis: {
-        crosshair: null
-    },
-    yAxis: {
-        crosshair: null
-    },
-    series: [{
-        name: 'Basemap',
-        mapData: map,
-        borderColor: '#606060',
-        nullColor: 'rgba(200, 200, 200, 0.2)',
-        showInLegend: false
-    }, {
-        name: 'Separators',
-        type: 'mapline',
-        data: H.geojson(map, 'mapline'),
-        color: '#101010',
-        enableMouseTracking: false,
-        showInLegend: false
-    }]
-};
+    var options = {
+        title: {
+            text: null
+        },
+        legend: {
+            enabled: false
+        },
+        exporting: false,
+        credits: false,
+        tooltip: {
+            enabled: false,
+            pointFormat: '{point.capital}, {point.parentState}<br>' +
+                'Lat: {point.lat}<br>' +
+                'Lon: {point.lon}<br>' +
+                'Population: {point.population}'
+        },
+        xAxis: {
+            crosshair: null
+        },
+        yAxis: {
+            crosshair: null
+        },
+        series: [{
+            name: 'Basemap',
+            mapData: map,
+            borderColor: '#606060',
+            nullColor: 'rgba(200, 200, 200, 0.2)',
+            showInLegend: false
+        }, {
+            name: 'Separators',
+            type: 'mapline',
+            data: H.geojson(map, 'mapline'),
+            color: '#101010',
+            enableMouseTracking: false,
+            showInLegend: false
+        }]
+    };
 
-chart = Highcharts.mapChart('arcs', options);
-document.addEventListener('aos:in:chart', ({ detail }) => {
-    Highcharts.getJSON('https://cdn.jsdelivr.net/gh/highcharts/highcharts@v7.0.0/samples/data/us-capitals.json', function (json) {
-        var data = [];
-        json.forEach(function (p) {
-            p.z = p.population;
-            data.push(p);
+    chart = Highcharts.mapChart('arcs', options);
+    document.addEventListener('aos:in:chart', ({ detail }) => {
+        Highcharts.getJSON('https://cdn.jsdelivr.net/gh/highcharts/highcharts@v7.0.0/samples/data/us-capitals.json', function (json) {
+            var data = [];
+            json.forEach(function (p) {
+                p.z = p.population;
+                data.push(p);
+            });
+
+            options.series.push({
+                type: 'mapbubble',
+                dataLabels: {
+                    enabled: false,
+                    format: '{point.capital}'
+                },
+                name: null,
+                data: data,
+                //maxSize: '12%',
+                color: H.getOptions().colors[0]
+            });
+
+            chart = Highcharts.mapChart('arcs', options);
         });
-
-        options.series.push({
-            type: 'mapbubble',
-            dataLabels: {
-                enabled: true,
-                format: '{point.capital}'
-            },
-            name: null,
-            data: data,
-            maxSize: '12%',
-            color: H.getOptions().colors[0]
-        });
-
-        chart = Highcharts.mapChart('arcs', options);
     });
-});
 </script>
 {{ end }}
