--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -20,3 +20,27 @@ body {
 [class*=text-underline-] {
     background: repeat-x left 1em/1em .15em;
 }
+
+#col-lead {
+    padding-top: 50%;
+}
+
+.gallery {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    -webkit-column-width: 50%;
+    -moz-column-width: 50%;
+    column-width: 50%;
+}
+
+.gallery .pics {
+    -webkit-transition: all 350ms ease;
+    transition: all 350ms ease;
+}
+
+.gallery .animation {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+}
