--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -27,6 +27,8 @@
       <link rel="stylesheet" href="{{ . }}">
     {{- end }}
 
+    {{ block "style" . }}{{ end }}
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ "/css/custom.css" | relURL }}">
 
