--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,6 +12,9 @@
             <ul class="navbar-nav"></ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <a href="index.html" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
                     <a href="index.html" class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item">
@@ -19,9 +22,6 @@
                 </li>
                 <li class="nav-item">
                     <a href="index.html" class="nav-link">Explore</a>
-                </li>
-                <li class="nav-item">
-                    <a href="index.html" class="nav-link">Donate</a>
                 </li>
             </ul>
         </div>
