--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,7 +17,7 @@
                     and present data on police activity in the U.S.
                 </p>
                 <!-- Button -->
-                <a href="#" class="btn btn-lg btn-success">Get the code</a>
+                <a href="/code" class="btn btn-lg btn-success">Get the code</a>
                 <a href="#" class="btn btn-lg btn-link text-white">Explore the data <i class="icon-chevron-right"></i></a>
             </div>
         </div>
@@ -133,7 +133,7 @@
                     Our library makes it easy to create custom, standardized
                     datasets for use with your favorite tools and apps.
                 </span>
-                <a href="pages-inner.html">Get Started &rsaquo;</a>
+                <a href="/code">Get Started &rsaquo;</a>
             </div>
             <div class="col-8 col-md-6 col-lg-4">
                 <div class="gallery" id="gallery">
