--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
     <div class="bg-dark navbar-dark" data-sticky="top">
     <div class="container">
         <nav class="navbar navbar-expand-md">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/">
             <img alt="Wingman" src="/img/logos/PDI-alt.svg" width="42"/>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,7 +18,7 @@
                     <a href="index.html" class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">Code</a>
+                    <a href="/code" class="nav-link">Code</a>
                 </li>
                 <li class="nav-item">
                     <a href="index.html" class="nav-link">Explore</a>
