--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -2,9 +2,19 @@ body {
     font-family: 'Inter', sans-serif;
 }
 
+pre {
+    display: block;
+    font-size: 87.5%;
+    color: #f8f9fa;
+}
+
 .bg-darkish {
     background-color: #2b3137 !important;
     color: #fff !important;
+}
+
+.bg-code {
+    background-color: #20272b !important;
 }
 
 .bg-blue-gradient {
@@ -43,4 +53,81 @@ body {
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
     transform: scale(1);
+}
+
+.editor {
+    border-color: #1c1f24;
+    color: #f8f9f9;
+}
+
+.window {
+    margin: 2em auto;
+    border: 1px solid;
+    border-radius: 3px;
+    font-size: 14px;
+    box-shadow: 0 0 0 3px rgba(0, 0, 0, .02);
+}
+
+.editor figcaption {
+    background-color: #16191d;
+    border-bottom-color: inherit;
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+}
+.window figcaption {
+    display: -webkit-flex;
+    display: flex;
+    letter-spacing: 1px;
+    border-bottom: 0;
+    padding-right: 66px;
+    padding-left: 12px;
+}
+
+.editor .chrome.button {
+    background-color: #21262b;
+}
+
+.chrome.title {
+    -webkit-flex: 1;
+    flex: 1;
+    text-align: center;
+    line-height: 36px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.chrome.button {
+    display: inline-block;
+    border-radius: 50%;
+    min-width: 12px;
+    height: 12px;
+    margin: 12px 6px 12px 0;
+    background-color: #ccc;
+}
+
+.CodeMirror-scroll {
+    overflow: hidden !important;
+}
+
+.juniper-cell {
+    font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    font-size: 1em;
+    line-height: 2;
+    border: none;
+    position: relative;
+}
+
+.juniper-output {
+    background: #20272b;
+    color: #eee;
+    padding: 2em;
+    border-top: 1px solid #1c1f24;
+    white-space: pre-wrap;
+}
+
+.juniper-button {
+    font-size: 1em;
+    position: absolute;
+    top: 20px;
+    right: 25px;
 }
