--- a/layouts/index.html
+++ b/layouts/index.html
@@ -50,7 +50,7 @@
                     standardized datasets.
                 </p>
                 <p>
-                    <a href="#">Learn More &rsaquo;</a>
+                    <a href="/about">Learn More &rsaquo;</a>
                 </p>
             </div>
         </div>
