--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,7 +12,7 @@
             <ul class="navbar-nav"></ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">About</a>
+                    <a href="/about" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
                     <a href="index.html" class="nav-link">Blog</a>
