--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,11 +1,28 @@
 body {
     font-family: 'Inter', sans-serif;
 }
-
 pre {
     display: block;
     font-size: 87.5%;
     color: #f8f9fa;
+}
+blockquote {
+    background: #f9f9f9;
+    border-left: 10px solid #ccc;
+    margin: 1.5em 10px;
+    padding: 0.5em 10px;
+    quotes: "\201C""\201D";
+}
+blockquote:before {
+    color: #ccc;
+    content: open-quote;
+    font-size: 4em;
+    line-height: 0.1em;
+    margin-right: 0.25em;
+    vertical-align: -0.4em;
+}
+blockquote p {
+    display: inline;
 }
 
 .bg-darkish {
