--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -21,7 +21,7 @@
                     <a href="/code" class="nav-link">Code</a>
                 </li>
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">Explore</a>
+                    <a href="/explore" class="nav-link">Explore</a>
                 </li>
             </ul>
         </div>
